--- a/festival/static/scss/components/_headers.scss
+++ b/festival/static/scss/components/_headers.scss
@@ -33,7 +33,8 @@
 .header {
   @extend .clearfix;
   background: $base_background_color url('../img/bg_manzoni--center.jpg') no-repeat top;
-  padding: $base_font_size 0;
+  padding: $base_font_size 0 0;
+  background-size: cover;
 
   h1 {
     margin: 0;
@@ -47,16 +48,16 @@
     font-weight: $regular;
     font-size: 1rem;
     @media (min-width : $desktop ) {
-        line-height: 85px;
-        font-size: 1.5rem;
+        line-height: 155px;
+        font-size: 1.8rem;
     }
   }
 
   &__logo {
     display: block;
     float: left;
-    max-width: 10rem;
     line-height: 1;
+    max-width: 15rem;
 
     &--right {
       display: none;
@@ -70,7 +71,7 @@
       max-height: 45px;
       width: auto;
       @media (min-width : $desktop ) {
-          max-height: 85px;
+          max-height: 150px;
       }
     }
 
