--- a/festival/static/scss/config/_variables.scss
+++ b/festival/static/scss/config/_variables.scss
@@ -10,6 +10,7 @@
 ---------------------------------- */
 
 // $manifeste16           : #e8ca88;
+// $manifeste16           : #007985;
 $manifeste16           : #d2ba88;
 $manifeste16_darker    : darken($manifeste16, 10);
 
