--- a/templates/base.html
+++ b/templates/base.html
@@ -164,6 +164,7 @@
                     </div>
                 </div>
                 {% include "includes/calendar.html" %}
+                {% include "includes/instafeed.html" %}
             </aside>
         </div>
     </div>
